--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -67,13 +67,44 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Bootstrap\bootstrap-grid.css" />
+    <Content Include="Content\Bootstrap\bootstrap-grid.min.css" />
+    <Content Include="Content\Bootstrap\bootstrap-reboot.css" />
+    <Content Include="Content\Bootstrap\bootstrap-reboot.min.css" />
+    <Content Include="Content\Bootstrap\bootstrap.css" />
+    <Content Include="Content\Bootstrap\bootstrap.min.css" />
+    <Content Include="Content\images\Login\bk-login.png" />
+    <Content Include="Login.aspx" />
+    <Content Include="title.ico" />
+    <Content Include="script\BootstrapJS\bootstrap.bundle.js" />
+    <Content Include="script\BootstrapJS\bootstrap.bundle.min.js" />
+    <Content Include="script\BootstrapJS\bootstrap.js" />
+    <Content Include="script\BootstrapJS\bootstrap.min.js" />
+    <Content Include="script\jquery-3.4.1.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Bootstrap\bootstrap-grid.css.map" />
+    <Content Include="Content\Bootstrap\bootstrap-grid.min.css.map" />
+    <Content Include="Content\Bootstrap\bootstrap-reboot.css.map" />
+    <Content Include="Content\Bootstrap\bootstrap-reboot.min.css.map" />
+    <Content Include="Content\Bootstrap\bootstrap.css.map" />
+    <Content Include="Content\Bootstrap\bootstrap.min.css.map" />
     <None Include="packages.config" />
+    <Content Include="script\BootstrapJS\bootstrap.bundle.js.map" />
+    <Content Include="script\BootstrapJS\bootstrap.bundle.min.js.map" />
+    <Content Include="script\BootstrapJS\bootstrap.js.map" />
+    <Content Include="script\BootstrapJS\bootstrap.min.js.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -90,6 +121,9 @@
       <Project>{9e714092-b313-4af8-85ff-7f5d23cc12d4}</Project>
       <Name>Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\css\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
