--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -135,7 +135,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DepartmentHandler.ashx.cs">
+    <Compile Include="Handler\DepartmentHandler.ashx.cs">
       <DependentUpon>DepartmentHandler.ashx</DependentUpon>
     </Compile>
     <Compile Include="DepartManager.aspx.cs">
@@ -152,6 +152,9 @@
     <Compile Include="Fram.aspx.designer.cs">
       <DependentUpon>Fram.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Handler\UserLoginHandler.ashx.cs">
+      <DependentUpon>UserLoginHandler.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -160,9 +163,6 @@
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserLoginHandler.ashx.cs">
-      <DependentUpon>UserLoginHandler.ashx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Bootstrap\bootstrap-grid.css.map" />
@@ -175,13 +175,13 @@
     <Content Include="Content\css\css\font-awesome\font\fontawesome-webfont.eot%40" />
     <Content Include="Content\css\css\font-awesome\font\fontawesome-webfont.ttf" />
     <Content Include="Content\css\css\font-awesome\font\fontawesome-webfont.woff" />
-    <Content Include="DepartmentHandler.ashx" />
+    <Content Include="Handler\DepartmentHandler.ashx" />
+    <Content Include="Handler\UserLoginHandler.ashx" />
     <None Include="packages.config" />
     <Content Include="script\BootstrapJS\bootstrap.bundle.js.map" />
     <Content Include="script\BootstrapJS\bootstrap.bundle.min.js.map" />
     <Content Include="script\BootstrapJS\bootstrap.js.map" />
     <Content Include="script\BootstrapJS\bootstrap.min.js.map" />
-    <Content Include="UserLoginHandler.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
