--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DepartmentBLL.cs" />
+    <Compile Include="EmpBLL.cs" />
     <Compile Include="LoginBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
